--- a/index.html
+++ b/index.html
@@ -234,16 +234,16 @@ function flipCard(card, num) {
 }
 
 const questions = [
-  {q:"1. Phát biểu lý thuyết nào sau đây định nghĩa chính xác nhất về nguyên tố hóa học?", a:["A. Là những nguyên tử có cùng số electron","B. Là những nguyên tử có cùng số neutron","C. Là tập hợp các nguyên tử có cùng điện tích hạt nhân","D. Là những nguyên tử có cùng số khối"], correct:2},
-  {q:"2. Về mặt lý thuyết, các orbital trong cùng một phân lớp (ví dụ 3 orbital của phân lớp 2p) có đặc điểm gì?", a:["A. Có mức năng lượng và hình dạng giống hệt nhau","B. Có cùng mức năng lượng nhưng khác nhau về sự định hướng trong không gian","C. Có hình dạng và sự định hướng trong không gian hoàn toàn khác nhau","D. Có cùng hình dạng nhưng khác nhau về mức năng lượng"], correct:1},
-  {q:"3. Nguyên lý hoặc quy tắc nào giải thích rằng các electron sẽ được phân bố vào các orbital của một phân lớp sao cho số electron độc thân là tối đa?", a:["A. Nguyên lý ngoại trừ Pauli","B. Quy tắc octet (bát tử)","C. Quy tắc Hund","D. Nguyên lý Aufbau"], correct:2},
-  {q:"4. Nguyên tử của nguyên tố X có cấu hình electron lớp ngoài cùng là 4s2 4p3 . Phát biểu nào sau đây là đúng về X?", a:["A. X là một nguyên tố khí hiếm","B. X là một kim loại","C. Trong bảng tuần hoàn, X thuộc chu kì 4, nhóm VA","D. Hạt nhân nguyên tử X có 33 neutron"], correct:2},
-  {q:"5. Cấu hình electron của ion S2− (biết S có Z=16) là gì?", a:["A. 1s2 2s2 2p6 3s2 3p4","B. 1s2 2s2 2p6 3s2 3p2","C. 1s2 2s2 2p6 3s2 3p6","D. 1s2 2s2 2p6 3s2 3p5"], correct:2},
-  {q:"6. Theo mô hình nguyên tử hiện đại, phát biểu lý thuyết nào sau đây là đúng?", a:["A. Không thể xác định đồng thời chính xác vị trí và tốc độ của electron","B. Khối lượng của nguyên tử phân bố đều trong toàn bộ thể tích nguyên tử","C. Tất cả các electron trong một nguyên tử đều có mức năng lượng bằng nhau","D. Electron chuyển động theo những quỹ đạo hình tròn hoặc elip xác định xung quanh hạt nhân"], correct:0},
-  {q:"7. Orbital nguyên tử (AO) về mặt lý thuyết là:?", a:["A. Khu vực không gian xung quanh hạt nhân mà ở đó xác suất tìm thấy electron là lớn nhất (khoảng 90%)","B. Quỹ đạo chuyển động của electron","C. Hình dạng của nguyên tử","D. Một mức năng lượng cụ thể của electron"], correct:0},
-  {q:"8. Lớp electron L (lớp thứ 2) có bao nhiêu phân lớp và bao nhiêu orbital?", a:["A. 2 phân lớp (2s, 2p) và 2 orbital","B. 1 phân lớp (2s) và 1 orbital","C. 2 phân lớp (2s, 2p) và 4 orbital","D. 3 phân lớp (2s, 2p, 2d) và 9 orbital"], correct:2},
-  {q:"9. Nguyên tử khối của một nguyên tử cho biết điều gì?", a:["A. Khối lượng tương đối của nguyên tử đó, bằng tổng khối lượng của các hạt p, n, e","B. Khối lượng chính xác của một nguyên tử đó, tính bằng gam","C. Tổng số proton và neutron có trong hạt nhân","D. Khối lượng tương đối của nguyên tử, cho biết khối lượng đó nặng gấp bao nhiêu lần đơn vị khối lượng nguyên tử (amu)"], correct:3},
-  {q:"10. Trong tự nhiên, Copper có hai đồng vị 63Cu và 65Cu. Nguyên tử khối trung bình của Cu là 63,54. Phần trăm của đồng vị 63Cu trong hợp chất CuSO4 là bao nhiêu?(Cho S=32, O=16)?", a:["A. 27,3%","B. 73%","C. 39,8%","D. 28,8%"], correct:3}
+  {q:". Phát biểu lý thuyết nào sau đây định nghĩa chính xác nhất về nguyên tố hóa học?", a:["A. Là những nguyên tử có cùng số electron","B. Là những nguyên tử có cùng số neutron","C. Là tập hợp các nguyên tử có cùng điện tích hạt nhân","D. Là những nguyên tử có cùng số khối"], correct:2},
+  {q:". Về mặt lý thuyết, các orbital trong cùng một phân lớp (ví dụ 3 orbital của phân lớp 2p) có đặc điểm gì?", a:["A. Có mức năng lượng và hình dạng giống hệt nhau","B. Có cùng mức năng lượng nhưng khác nhau về sự định hướng trong không gian","C. Có hình dạng và sự định hướng trong không gian hoàn toàn khác nhau","D. Có cùng hình dạng nhưng khác nhau về mức năng lượng"], correct:1},
+  {q:". Nguyên lý hoặc quy tắc nào giải thích rằng các electron sẽ được phân bố vào các orbital của một phân lớp sao cho số electron độc thân là tối đa?", a:["A. Nguyên lý ngoại trừ Pauli","B. Quy tắc octet (bát tử)","C. Quy tắc Hund","D. Nguyên lý Aufbau"], correct:2},
+  {q:". Nguyên tử của nguyên tố X có cấu hình electron lớp ngoài cùng là 4s2 4p3 . Phát biểu nào sau đây là đúng về X?", a:["A. X là một nguyên tố khí hiếm","B. X là một kim loại","C. Trong bảng tuần hoàn, X thuộc chu kì 4, nhóm VA","D. Hạt nhân nguyên tử X có 33 neutron"], correct:2},
+  {q:". Cấu hình electron của ion S2− (biết S có Z=16) là gì?", a:["A. 1s2 2s2 2p6 3s2 3p4","B. 1s2 2s2 2p6 3s2 3p2","C. 1s2 2s2 2p6 3s2 3p6","D. 1s2 2s2 2p6 3s2 3p5"], correct:2},
+  {q:". Theo mô hình nguyên tử hiện đại, phát biểu lý thuyết nào sau đây là đúng?", a:["A. Không thể xác định đồng thời chính xác vị trí và tốc độ của electron","B. Khối lượng của nguyên tử phân bố đều trong toàn bộ thể tích nguyên tử","C. Tất cả các electron trong một nguyên tử đều có mức năng lượng bằng nhau","D. Electron chuyển động theo những quỹ đạo hình tròn hoặc elip xác định xung quanh hạt nhân"], correct:0},
+  {q:". Orbital nguyên tử (AO) về mặt lý thuyết là:?", a:["A. Khu vực không gian xung quanh hạt nhân mà ở đó xác suất tìm thấy electron là lớn nhất (khoảng 90%)","B. Quỹ đạo chuyển động của electron","C. Hình dạng của nguyên tử","D. Một mức năng lượng cụ thể của electron"], correct:0},
+  {q:". Lớp electron L (lớp thứ 2) có bao nhiêu phân lớp và bao nhiêu orbital?", a:["A. 2 phân lớp (2s, 2p) và 2 orbital","B. 1 phân lớp (2s) và 1 orbital","C. 2 phân lớp (2s, 2p) và 4 orbital","D. 3 phân lớp (2s, 2p, 2d) và 9 orbital"], correct:2},
+  {q:". Nguyên tử khối của một nguyên tử cho biết điều gì?", a:["A. Khối lượng tương đối của nguyên tử đó, bằng tổng khối lượng của các hạt p, n, e","B. Khối lượng chính xác của một nguyên tử đó, tính bằng gam","C. Tổng số proton và neutron có trong hạt nhân","D. Khối lượng tương đối của nguyên tử, cho biết khối lượng đó nặng gấp bao nhiêu lần đơn vị khối lượng nguyên tử (amu)"], correct:3},
+  {q:". Trong tự nhiên, Copper có hai đồng vị 63Cu và 65Cu. Nguyên tử khối trung bình của Cu là 63,54. Phần trăm của đồng vị 63Cu trong hợp chất CuSO4 là bao nhiêu?(Cho S=32, O=16)?", a:["A. 27,3%","B. 73%","C. 39,8%","D. 28,8%"], correct:3}
 ];
 
  function showQuestion(index) {
@@ -306,4 +306,5 @@ const questions = [
  
 
   
+
 
