--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(255,255,255,0.15);
+    background: rgba(17, 11, 11);
     backdrop-filter: blur(10px);
-    border: 2px solid rgba(255,255,255,0.3);
+    border: 2px solid rgba(17, 11, 11);
     padding: 20px;
     border-radius: 20px;
     display: none;
@@ -306,5 +306,6 @@ const questions = [
  
 
   
+
 
 
