--- a/index.html
+++ b/index.html
@@ -307,6 +307,10 @@ const questions = [
   }
 };
 
+    answersDiv.appendChild(btn);
+  });
+}
+
 
    document.getElementById('restart').onclick = () => location.reload(); 
    </script> 
@@ -315,6 +319,7 @@ const questions = [
  
 
   
+
 
 
 
